# concordia

./: .env.example  .gitignore  ARCHITECTURE_PERFORMANCE.md  COMPLIANCE_CHECKLIST.md  Dockerfile  LICENCSE  LICENSE  MANIFEST.in  Makefile  PERF_V2_BLUEPRINT.md  README.md  config.example.json  docker-compose.yml  install.sh  prd.md  promptbus.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  workflow.yml
.opencode/agents/: architect_explainer.md  docbot.md
concordia/: __init__.py  cli.py  client.py  client_cli.py  compliance.py  config.py  debug.py  dedupe.py  host_cli.py  protocol.py  server.py  utils.py
concordia/ui/: __init__.py  app.py  theme.tcss
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  TASK2-ISSUES.md
docs/fixes/: fix.MD
docs/plans/: 2026-01-24-smart-install-wrapper.md  2026-01-25-claude-interactive-mode-task2.md  2026-01-25-claude-interactive-mode.md
scripts/: build_bundle.sh  build_release.sh  demo.sh
