[project]
name = "concordia"
version = "0.0.1"
authors = [
  { name = "Concordia Contributors", email = "atharva.jgupta@gmail.com" },
]
description = "Multi-user shared terminal"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "Proprietary"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/atharva789/concordia"
Issues = "https://github.com/atharva789/concordia/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
